# ChangeLog for app-text/texlive
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Sep 2007; Alexis Ballier <aballier@gentoo.org> texlive-2007.ebuild:
  support for various other languages

  08 Sep 2007; Alexis Ballier <aballier@gentoo.org> texlive-2007.ebuild:
  add support for armenian locale

  07 Sep 2007; Alexis Ballier <aballier@gentoo.org> texlive-2007.ebuild:
  add support for indian locales

  07 Sep 2007; Alexis Ballier <aballier@gentoo.org> texlive-2007.ebuild:
  context deps will be handled in the ebuild as it should have been done from
  the beginning

  07 Sep 2007; Alexis Ballier <aballier@gentoo.org> texlive-2007.ebuild:
  add references to the last few missing dev-texlive ebuilds

  30 Aug 2007; Alexis Ballier <aballier@gentoo.org> texlive-2007.ebuild:
  install greek language support with context as some font files are needed

  29 Aug 2007; Alexis Ballier <aballier@gentoo.org> texlive-2007.ebuild:
  add a changelog, move binextra to texlive-source
