@@ -1,11 +1,11 @@
-EBUILD texlive-2007.ebuild 6208 RMD160 75950df6ed7467243adf182e3b3114b6cf8e0d77 SHA1 e2765178fa64ef93078b9c0f1ede02ca96fb0e8a SHA256 29518581c34f26050bda32bb9efa5c726e0963ab12aa64476cc3085c4db69839
-MD5 ddc47a40aa92ff5a86f511e5133dceec texlive-2007.ebuild 6208
-RMD160 75950df6ed7467243adf182e3b3114b6cf8e0d77 texlive-2007.ebuild 6208
-SHA256 29518581c34f26050bda32bb9efa5c726e0963ab12aa64476cc3085c4db69839 texlive-2007.ebuild 6208
-MISC ChangeLog 1022 RMD160 be5ac98867c7a04b272467a7602dfa607a695c44 SHA1 65d17abd8b95b2c908b4d240028644039963dff6 SHA256 2f591c033c1f673751c02ec7f2374e9f611fb9deef90129bec97266efc47723e
-MD5 0c89b1863dad53f47e5db4e94c9ecc69 ChangeLog 1022
-RMD160 be5ac98867c7a04b272467a7602dfa607a695c44 ChangeLog 1022
-SHA256 2f591c033c1f673751c02ec7f2374e9f611fb9deef90129bec97266efc47723e ChangeLog 1022
+EBUILD texlive-2007.ebuild 5908 RMD160 06fbc7b05abab62453217a8b5d388eedfec10e24 SHA1 d35b9e7b9bb968b6523730de3b1694cee677440a SHA256 8287857e8cd459ea24cd1c6beef351d87e6a76744903cbb5abe6e0f4807f7e58
+MD5 4ab10911e29173085ed0d558d248d181 texlive-2007.ebuild 5908
+RMD160 06fbc7b05abab62453217a8b5d388eedfec10e24 texlive-2007.ebuild 5908
+SHA256 8287857e8cd459ea24cd1c6beef351d87e6a76744903cbb5abe6e0f4807f7e58 texlive-2007.ebuild 5908
+MISC ChangeLog 1161 RMD160 9201b8bda80abf252394879d412b8daa5eeae80a SHA1 7fde7df7ff86d998efc5abd9697de25165bea99b SHA256 3ac12827e9fa4bc0a082586facb38b747d940d4462d6cfcf3ba27bde92b6e7a4
+MD5 a9c927560ca6dec6c0a347acf921799e ChangeLog 1161
+RMD160 9201b8bda80abf252394879d412b8daa5eeae80a ChangeLog 1161
+SHA256 3ac12827e9fa4bc0a082586facb38b747d940d4462d6cfcf3ba27bde92b6e7a4 ChangeLog 1161
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-texlive-2007 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-texlive-2007 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-texlive-2007 0
